# agent-harness-skills

./: .coverage  .editorconfig  .env.example  .env.observability-a  .gitignore  .gitlab-ci.yml  .ls-lint.yml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DOCS_INDEX.md  ERROR_HANDLING_RULES.md  EVALUATION.md  FILE-NAMING.md  HEALTH_CHECK_SPEC.md  Makefile  PRINCIPLES.md  README.md  SPEC.md  app_spec.txt  boot_agent-harness-skills.sh  checkpoint_agent.py  claw-forge.yaml  claw_forge.db  conftest.py  coordinate.py  coverage.json  example.py  git_checkpoint.py  handoff.py  harness-context.sh  harness-init.sh  harness.config.yaml  harness_context.py  harness_manifest.json  harness_manifest.schema.json  harness_status.py  harness_symbols.json  harness_telemetry.py  (+10 more)
.claude/: principles.yaml  principles.yaml.example
.claude/commands/: agents-md-generator.md  agents-md.md  architecture.md  boundary-validation.md  browser-automation.md  check-code.md  checkpoint.md  ci-pipeline.md  concurrency-patterns.md  context-handoff.md  coordinate.md  create-spec.md  define-principles.md  design-docs.md  detect-api-style.md  detect-env-vars.md  doc-freshness-gate.md  dom-snapshot.md  execution-plans.md  expand-project.md  extract-principles.md  file-naming-convention.md  file-size-gate.md  generate-docs.md  golden-principles-cleanup.md  harness-changelog.md  harness-init.md  health-check-endpoint.md  import-ordering.md  log-format-linter.md  logging-convention.md  module-boundaries.md  observability.md  principles-report.md  progress-log.md  providers-pattern.md  review-pr.md  type-safety-gate.md
.claw-forge/: CHECKPOINT.md  state.db-shm  state.db-wal  state.db.corrupt
.claw-forge/snapshots/: snapshot-20260320T103148.json  snapshot-20260320T124355.json  snapshot-20260322T201012.json
.github/: pull_request_template.md
.github/workflows/: coverage-gate.yml  deploy-tutorial.yml  harness-evaluate.yml  module-boundaries-gate.yml  perf-gate.yml  principles-gate.yml  publish.yml  security-gate.yml  type-gate.yml
.harness/: perf-thresholds.yml  perf_summary.py
agent_harness_skills.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: ARCHITECTURE.md  DOCS_INDEX.md  ERROR_HANDLING_RULES.md  EVALUATION.md  HEALTH_CHECK_SPEC.md  PRINCIPLES.md  SPEC.md  agent_tool_desig_guidelines.md  gap-closure-plan.md  harness-changelog.md  harness-telemetry.json  index.md  plan-to-pr-convention.md
docs/agents/: browser.md  cli-commands.md  coordination.md  gates.md  logging.md  skills.md
docs/architecture/: README.md
docs/cli/: audit.md  boot.md  completion-report.md  context.md  coordinate.md  create.md  evaluate.md  index.md  lint.md  manifest.md  observe.md  plan.md  resume.md  screenshot.md  search.md  status.md  telemetry.md  update.md
docs/design-docs/: template.md
docs/exec-plans/: cleanup-tasks.yaml  debt.md  perf.md  plan-template.yaml  progress.md  shared-state.yaml
docs/guides/: agent-tool-design-guidelines.md  context-reset-vs-compaction.md  plan-to-pr-convention.md
dom_snapshot_utility/: AGENTS.md  __init__.py  requirements.txt  snapshot.py
examples/: adversarial_evaluator_example.py  context_handoff_example.py  handoff_example.py  performance_hooks_example.py  plan_example.json  task_lock_example.py
harness_dashboard/: AGENTS.md  __init__.py  dashboard.py  data_generator.py  models.py  requirements.txt  scorer.py
harness_skills/: AGENTS.md  __init__.py  boot.py  context_depth.py  dom_snapshot_skill.py  effectiveness_stats.py  env_isolation.py  env_var_detector.py  error_aggregation.py  error_query_agent.py  evaluator.py  handoff.py  logging.yaml  logging_config.py  performance_hooks.py  pivot_tracker.py  pr_effectiveness.py  resume.py  resume_test_probe.py  stale_plan_detector.py  task_lock.py  telemetry.py  telemetry_reporter.py
harness_skills/analyzers/: __init__.py  base.py  csharp_analyzer.py  go_analyzer.py  java_analyzer.py  python_analyzer.py  rust_analyzer.py  (+1 more)
harness_tools/: __init__.py  checkpoint_agent.py  coordinate.py  git_checkpoint.py  handoff.py  harness_context.py  harness_status.py  harness_telemetry.py  stale_plan_detector.py  task_lock.py
log_format_linter/: AGENTS.md  __init__.py  checker.py  cli.py  detector.py  generator.py  models.py
observability/: .env.example  README.md  docker-compose.observability.yml  docker-compose.yml
schemas/: harness_manifest.schema.json  log_entry.schema.json
scripts/: boot_agent-harness-skills.sh  check_file_naming.py  check_module_boundaries.py  check_principles.py  ci_arch_check.py  generate_symbol_index.py  harness-init-standalone.sh  harness-init.sh  harness-lint.sh  harness_init.py  import_principles.py  worktree-create.sh  worktree-env.sh  worktree-remove.sh
skills/: AGENTS.md  app_spec.brownfield.template.xml  debt_tracker.py  exec_plan.py  golden_principles_cleanup.py  perf_hooks.py  progress_log.py  shared_state.py  write_handoff.py
spec/: app_spec.example.xml  logging_convention_spec.txt
tests/: AGENTS.md  test_architecture.py  test_boot.py  test_check_principles.py  test_context_depth.py  test_coverage_gaps.py  test_dashboard_models_gaps.py  test_dashboard_render.py  test_data_generator.py  test_data_generator_gaps.py  test_dom_snapshot.py  test_dom_snapshot_gaps.py  test_effectiveness_stats.py  test_env_isolation.py  test_env_var_detector.py  test_error_aggregation.py  test_error_query_agent.py  test_evaluator.py  test_exec_plan.py  test_git_checkpoint.py  test_golden_principles_cleanup.py  test_handoff.py  test_harness_init.py  test_health_check_endpoint.py  test_import_principles.py  test_log_format_linter.py  test_log_format_linter_gaps.py  test_logging_config.py  test_mkdocs_config.py  test_perf_hooks.py  test_pivot_tracker.py  test_pr_effectiveness.py  test_progress_log.py  test_resume.py  test_scorer.py  test_stale_plan_detector.py  test_stale_plan_detector_extra.py  test_task_lock.py  test_task_lock_async.py  test_telemetry.py  (+1 more)
tutorial/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+302 files in other folders)
